feat: add mixins for Iron's Lib Patreon check