@@ -69,6 +69,8 @@ public class SMSNConfig extends ModConfig {
     public boolean illagerRevolutionPatreon = false;
     @LoaderSpecific(LoaderType.FORGE)
     public boolean mpgUpdateChecker = false;
+    @LoaderSpecific(LoaderType.FORGE)
+    public boolean ironsLibPatreon = false;
 
     @Category("qol")
     @Components.Switch(checked = "enable", unchecked = "disabled")
@@ -115,7 +117,7 @@ public class SMSNConfig extends ModConfig {
         }
 
         public boolean isHide(String name) {
-            if (CELEBRATIONS.size() == 1 && CELEBRATIONS.get(0).equals("all")) return true;
+            if (CELEBRATIONS.size() == 1 && CELEBRATIONS.getFirst().equals("all")) return true;
             return CELEBRATIONS.contains(name);
         }
     }
